--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
   <main>
       <div class="main-div">
         <section>
+          <h2 class="idle-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
           <div class="card-div">
             <img class="avatar" src="images/image-victor.jpg" alt="">
           </div>
         </section>
 
         <section>
+          <h2 class="idle-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
           <div class="text-container">
             <div class="text-div">
               <div class="bio">
